<resources>
    <string name="app_name">tutoringservice-android</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome Tutor</string>
    <string name="selectSeshText">Select a session</string>
    <string name="setAvailability">Set Availability</string>
    <string name="myAvailability">My Availability</string>


    <!-- Availability page -->
    <!-- My Availabilities Page-->
    <string name="title_activity_my_availability">MyAvailability</string>
    <string name="day_of_week">Monday</string>
    <string name="month">December</string>
    <string name="start_date">15</string>
    <string name="end_date">3</string>
    <string name="start_time">00:00</string>
    <string name="end_time">00:00</string>
    <string name="set_avail_button">Set Availabilities</string>
    <!--    Set Availabilities Page -->
    <string name="newavail">Set New Availability</string>

    <string name="startdate_label">Start Date?</string>
    <string name="startdate_first">01-07-2019</string>
    <string name="enddate_label">End Date?</string>
    <string name="enddate_first">02-07-2019</string>

    <string name="starttime_label">Start time?</string>
    <string name="starttime_first">10:00</string>
    <string name="endtime_label">End time?</string>
    <string name="endtime_first">16:00</string>

    <string name="newavail_button">Add Availability</string>

</resources>
