<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#330C2F"
    tools:context="ca.mcgill.ecse321.tutoringservice.MyAvailability">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintVertical_bias="0.024">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="MY AVAILABILITIES"
            android:textColor="#F5F5F5"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|fill_horizontal"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="130dp"
                    android:layout_gravity="bottom"
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="Day of the Week" />

                <TextView
                    android:layout_gravity="bottom"
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="Month" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="Start \nDate" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="End \nDate" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="Start \nTime" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="End \nTime" />
            </TableRow>
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />
            <TableRow>

                <TextView
                    android:layout_width="130dp"
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/day_of_week" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/month" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/start_date" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/end_date" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/start_time" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/end_time" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="DELETE" />
            </TableRow>
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />
            <TableRow>

                <TextView
                    android:layout_width="130dp"
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/day_of_week" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/month" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/start_date" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/end_date" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/start_time" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="@string/end_time" />

                <TextView
                    android:padding="3dip"
                    android:textColor="#F5F5F5"
                    android:text="DELETE" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="543dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/setAvailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="40dp"
        android:text="@string/set_avail_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--        android:onClick="addPerson"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>
